5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1795_1600.log
== TEST (2019-05-30 16:09:58) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
while (i!=v[i]):
	if (v[i]>80):
		v = v+(v[i]*(15/100)
	i = i+1
print(v)
-- ERROR:
File "XXXX", line 8
    i = i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:10:36) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
while (i!=v[i]):
	if (v[i]>80):
		v = v+(v[i]*(15/100)
	i = i+1
print(v)
-- ERROR:
File "XXXX", line 8
    i = i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:05) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while (i!=v[i]):
	if (v[i]>80):
		v = v+(v[i]*(15/100))
	i = i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:34) 
-- CODE:
from numpy import *

v = array(eval(float(input())))
i = 0

while (i!=v[i]):
	if (v[i]>80):
		v = v+(v[i]*(15/100))
	i = i+1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:13:44) 
-- CODE:
from numpy import *

v = array(eval(float(input())))
i = 0

while (i!=v[i]):
	if (v[i]>80):
		v = v+(v[i]*(15/100))
	i = i+1
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:14:32) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while (i!=v[i]):
	if (v[i]>80):
		v = v+(v[i]*(15/100))
	i = i+1
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:16:26) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while (i!=v):
	if (v[i]>80):
		v = v+(v[i]*(15/100))
	i = i+1
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:29) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while (i!=(v[i])):
	if (v[i]>80):
		v = v+(v[i]*(15/100))
	i = i+1
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:10) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while i != (size(v)):
	if (v[i]>80):
		v = v+(v[i]*(15/100))
	i = i+1
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:24:33) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while i != (size(v)):
	if (v[i]>80):
		v = v+(v[i]*(15/100))
	i = i+1
print(round(v, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:09) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while i != (size(v)):
	if (v[i]>80):
		a = v+(v[i]*(15/100))
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:09) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while i != (size(v)):
	if (v[i]>80):
		a = v+(v[i]*(15/100))
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:27:19) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0

while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:01) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:28:19) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]-(15/100))
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:30) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:33:29) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]-(15/100))
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:34:36) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]-(15/100))
	else:
		a = a+0
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:45) 
-- CODE:
from numpy import *

v = array(float(eval(input())))
i = 0
a = 0
while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]-(15/100))
	else:
		a = a+0
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:54) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	else:
		a = a+0
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:39:13) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i != (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	else:
		a = a+0
	i = i+1
b = sum(a)
print(round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:49:34) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i < (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	else:
		a = a+v[i]
	i = i+1
b = a+v[i]
print(round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:23) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i < (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	else:
		a = a+v[i]
	i = i+1
print(round(a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:13) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
while i < (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	else:
		a = a+v[i]
	i = i+1
b = sum(a)
print(round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:18) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
b = 0
while i < (size(v)):
	if (v[i]>80):
		a = a+(v[i]*(15/100))
	else:
		a = a+v[i]
	i = i+1
b = b+a
print(round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:34) 
-- CODE:
from numpy import *

v = array(eval(input()))
i = 0
a = 0
b = 0
while i < (size(v)):
	if (v[i]>80):
		a = a+(v[i]-(15/100))
	else:
		a = a+v[i]
	i = i+1
b = b+a
print(round(b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
